--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
   # - source ~/eb-virt/bin/activate
 # command to install dependencies
 install:
-  - pip install -r requirements.txt>
+  - pip install -r requirements.txt
 # command to run tests
 # Set max line length for flake8 to 88 to match black.
 
