--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ install:
 # Set max line length for flake8 to 88 to match black.
 
 before_script:
-  # - python manage.py migrate
+  - python3 manage.py migrate
   # - python manage.py collectstatic --noinput
 before_deploy: "echo 'ready?'"
 
