--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ install:
 # Set max line length for flake8 to 88 to match black.
 
 before_script:
-  # - python3 manage.py migrate
-  # - python manage.py collectstatic --noinput
+  - python manage.py migrate
+  - python manage.py collectstatic --noinput
 before_deploy: "echo 'ready?'"
 
 after_deploy:
@@ -21,13 +21,13 @@ after_deploy:
 deploy:
   provider: elasticbeanstalk
   access_key_id:
-    secure: "your_access_key"
+    secure: "AWS_ACCESS_KEY_ID"
   secret_access_key:
-    secure: "your_secret_key"
+    secure: "AWS_SECRET_ACCESS_KEY"
   region: "us-east-1"
   app: "mysite"
-  env: "mysite-dev"
-  bucket_name: "the-target-S3-bucket"
+  env: "mysite-dev2"
+  bucket_name: "S3_BUCKET_NAME"
   on:
     branch: master # Or whichever branch you want to deploy from.
 
@@ -35,7 +35,7 @@ script:
   # Check code formatting with black.
   - black --check .
   # Run flake8 linter.
-  - flake8 --max-line-length=91
+  - flake8 .
   # Run your test suite and capture coverage.
   - coverage run --source=polls manage.py test
 
