--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 python:
-  - "3.11"
+  - "3.11-dev"
 before_install:
   # - source ~/eb-virt/bin/activate
 # command to install dependencies
