--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ dist: bionic
 python:
   - "3.11"
 before_install:
+  - source eb-virt/bin/activate
   - pip install 'urllib3<2.0'
   - sudo apt-get update
   - sudo apt-get install -y sqlite3 libsqlite3-dev
