--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - sudo apt-get install -y sqlite3 libsqlite3-dev
   # Verify SQLite version
   - sqlite3 --version
-  - pip freeze > requirements.txt
+  # - pip freeze > requirements.txt
 install:
   # - pip install -r requirements.txt
 
