--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,8 @@ install:
   
 deploy:
   provider: elasticbeanstalk
-  access_key_id:
-    secure: "$AWS_ACCESS_KEY_ID"
-  secret_access_key:
-    secure: "$AWS_SECRET_ACCESS_KEY"
+  access_key_id: "$AWS_ACCESS_KEY_ID"
+  secret_access_key: "$AWS_SECRET_ACCESS_KEY"
   region: "us-east-1"
   app: "mysite"
   env: "mysite-dev2"
